gl51-master/src/test/deca/context/valid/testObject-cast.deca
//Description
//cast class

class A {}
class B extends A {}
{
    A a = new B();
    B b = (B) (a);
}