gl51-master/src/test/deca/context/invalid/testObject_visibility2.deca
//Description
//Accès direct à un attribut privé

class A {
    protected int i = 1;
}

{
    A a = new A();
    println(a.i);
}